--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   # Disable xdebug.
   - phpenv config-rm xdebug.ini
   # Lets set-up our helper repository with all the docker config and use correct version in composer.json.
-  - git clone --branch 8.x https://github.com/drupalwxt/site-wxt.git
+  - git clone --branch pre-2.0.0-upgrade https://github.com/drupalwxt/site-wxt.git
   - cd site-wxt
   # Install Drupal WxT.
   - export PR=https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/$TRAVIS_PULL_REQUEST
