--- a/composer.json
+++ b/composer.json
@@ -132,6 +132,8 @@
                 "https://www.drupal.org/files/issues/user_password-2816921-2.patch",
                 "Enter drupal/core patch #2820347 description here":
                 "https://www.drupal.org/files/issues/exposed_filter_reset-2820347-67.patch",
+                "Enter drupal/core patch #2856362 description here":
+                "https://www.drupal.org/files/issues/2018-05-25/drupal_core-percona_compliance-2856362-13-8.6.x.patch",
                 "Enter drupal/core patch #2885370 description here":
                 "https://www.drupal.org/files/issues/systemmainblock_build-2885370-3.patch",
                 "Enter drupal/core patch #2862511 description here":
@@ -144,6 +146,8 @@
                 "https://www.drupal.org/files/issues/node_preview_error-2914233-5.patch",
                 "Enter drupal/core patch #2920637 description here":
                 "https://www.drupal.org/files/issues/taxonomy-context-provider-2920637-3.patch",
+                "Enter drupal/core patch #2893407 description here":
+                "https://www.drupal.org/files/issues/2018-06-05/2893407-34.patch",
                 "Enter drupal/core patch #2930599 description here":
                 "https://www.drupal.org/files/issues/content_moderation-path_alias-2930599-09.patch"
             },
@@ -208,7 +212,6 @@
     "require": {
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.4",
-        "oomphinc/composer-installers-extender": "^1.1",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "acquia/lightning": "3.2.2",
         "drupal/admin_toolbar": "1.24",
@@ -249,8 +252,8 @@
         "drupal/views_autocomplete_filters": "1.2",
         "drupal/webform": "^5.0-rc16",
         "drupal/webform_migrate": "1.0-alpha1",
-        "drupal/wxt_bootstrap": "1.5",
-        "drupal/wxt_library": "1.3",
+        "drupal/wxt_bootstrap": "2.x-dev",
+        "drupal/wxt_library": "1.x-dev",
         "w8tcha/ckeditor-codemirror": "1.16"
     },
     "autoload": {
