--- a/composer.json
+++ b/composer.json
@@ -245,6 +245,7 @@
         "drupal/metatag": "1.7",
         "drupal/migrate_plus": "4.0",
         "drupal/migrate_tools": "4.0",
+        "drupal/s3fs": "3.0-alpha10",
         "drupal/url_embed": "1.0-alpha1",
         "drupal/views_bootstrap": "3.1",
         "drupal/scheduled_updates": "1.0.0-alpha7",
