--- a/composer.json
+++ b/composer.json
@@ -213,16 +213,16 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.4",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "acquia/lightning": "3.2.3",
+        "acquia/lightning": "3.2.4",
         "drupal/admin_toolbar": "1.25",
         "drupal/block_class": "1.0",
         "drupal/blog": "dev-2.x#43a2171",
         "drupal/bootstrap_layouts": "5.1",
         "drupal/button_link": "1.1",
-        "drupal/ckeditor_codemirror": "2.1",
+        "drupal/ckeditor_codemirror": "2.2",
         "drupal/config_rewrite": "1.1",
         "drupal/config_update": "1.6",
-        "drupal/core": "8.6.6",
+        "drupal/core": "8.6.7",
         "drupal/diff": "1.0-rc2",
         "drupal/entity_reference_revisions": "1.6",
         "drupal/features": "^3.0",
@@ -244,7 +244,7 @@
         "drupal/field_formatter": "1.2",
         "drupal/file_entity": "2.0-beta6",
         "drupal/metatag": "1.7",
-        "drupal/migrate_plus": "4.1",
+        "drupal/migrate_plus": "4.0",
         "drupal/migrate_tools": "4.1",
         "drupal/s3fs": "3.0-alpha13",
         "drupal/url_embed": "1.0-alpha1",
@@ -253,7 +253,7 @@
         "drupal/token_filter": "1.1",
         "drupal/views_autocomplete_filters": "1.2",
         "drupal/webform": "^5.1",
-        "drupal/webform_migrate": "1.0-alpha1",
+        "drupal/webform_migrate": "1.1",
         "drupal/wxt_bootstrap": "2.x-dev",
         "drupal/wxt_library": "2.x-dev",
         "w8tcha/ckeditor-codemirror": "1.16"
