feat(homepage): Add homepage migration + templates

--- a/modules/custom/wxt_ext/wxt_ext_migration/config/install/migrate_plus.migration.gcweb_node_landing_page.yml
+++ b/modules/custom/wxt_ext/wxt_ext_migration/config/install/migrate_plus.migration.gcweb_node_landing_page.yml
@@ -8,12 +8,126 @@ source:
   data_rows:
     -
       name: homepage
+      title: 'Canada.ca'
+      language: en
+      body: |
+        <p>The official website of the Government of Canada.</p>
+      alias: /homepage
+      queue: front_page
+      metatags:
+        -
+          title: '[node:title]'
+          description: '[node:summary]'
+          keywords: 'Canada.ca, Open Government, Open Government Canada, Canada Open Government, Canada Open'
+      panelizer:
+        -
+          view_mode: page_manager
+          default: two_column
+          blocks:
+            -
+              id: 'block_content:homepage_block_1'
+              label: Canada
+              label_display: 0
+              region: top
+              view_mode: default
+              weight: 1
+            -
+              id: 'block_content:homepage_block_2'
+              label: 'Most Requested'
+              label_display: 0
+              region: top
+              view_mode: default
+              weight: 2
+            -
+              id: 'block_content:homepage_block_3'
+              label: 'Focus On'
+              label_display: 0
+              region: top
+              view_mode: default
+              weight: 3
+            -
+              id: 'block_content:homepage_block_4'
+              label: 'Your Government'
+              label_display: 0
+              region: top
+              view_mode: default
+              weight: 4
+            -
+              id: 'views_block:blocks-block_2'
+              label: Features
+              label_display: visible
+              region: bottom
+              view_mode: full
+              weight: 0
+          id: panels_variant
+          uuid: 5f833455-c610-41c5-ae17-149ada3d74a5
+          label: 'WxT'
+          weight: 0
+          layout: wxt_homepage
+          layout_settings:
+            layout:
+              wrapper: div
+              classes:
+                row: row
+              add_layout_class: 1
+              attributes: ''
+            regions:
+              top:
+                wrapper: div
+                classes:
+                  col-sm-12: col-sm-12
+                add_region_classes: 1
+                attributes: ''
+              top_left:
+                wrapper: div
+                classes:
+                  col-md-6: col-md-8
+                add_region_classes: 1
+                attributes: class|mrgn-tp-md
+              top_right:
+                wrapper: div
+                classes:
+                  col-md-6: col-md-4
+                add_region_classes: 1
+                attributes: class|mrgn-tp-xl
+              middle:
+                wrapper: div
+                classes:
+                  col-sm-12: col-sm-12
+                add_region_classes: 1
+                attributes: ''
+              bottom_left:
+                wrapper: div
+                classes:
+                  col-sm-6: col-sm-6
+                add_region_classes: 1
+                attributes: ''
+              bottom_right:
+                wrapper: div
+                classes:
+                  col-sm-6: col-sm-6
+                add_region_classes: 1
+                attributes: ''
+              bottom:
+                wrapper: div
+                classes:
+                  col-sm-12: col-sm-12
+                add_region_classes: 1
+                attributes: class|mrgn-tp-lg
+          page_title: '[node:title]'
+          storage_type: panelizer_default
+          storage_id: 'node:landing_page:full:two_column'
+          pattern: panelizer
+          builder: ipe
+          static_context: {  }
+    -
+      name: topic
       title: '[Theme title]'
       language: en
       body: |
         <p>1-2 sentences that describe the topics and top tasks that can be accessed on this page.</p>
-      alias: /homepage
-      queue: front_page
+      alias: /topic
+      queue: topic_page
       metatags:
         -
           title: '[node:title]'
@@ -187,4 +301,6 @@ destination:
 migration_dependencies:
   required:
     - wxt_media_slideshow
+    - gcweb_block
+    - gcweb_block_spotlight
     - gcweb_menu_link
