--- a/modules/custom/wxt_ext/wxt_ext_migration/config/install/migrate_plus.migration.gcweb_block_spotlight_translation.yml
+++ b/modules/custom/wxt_ext/wxt_ext_migration/config/install/migrate_plus.migration.gcweb_block_spotlight_translation.yml
@@ -1,4 +1,4 @@
-id: gcweb_ext_block_spotlight_translation
+id: gcweb_block_spotlight_translation
 migration_tags:
   - spotlight
 migration_group: gcweb_translation
@@ -43,7 +43,7 @@ source:
 process:
   id:
     plugin: migration_lookup
-    migration: gcweb_ext_block_spotlight
+    migration: gcweb_block_spotlight
     source: bid
   info: title
   uid:
@@ -75,4 +75,4 @@ migration_dependencies:
   required:
     - wxt_file
     - wxt_media
-    - gcweb_ext_block_spotlight
+    - gcweb_block_spotlight
